:bug: Correction du placement du logo en version mobile et ajustement de la modale..

--- a/starterOnly/css/modal.css
+++ b/starterOnly/css/modal.css
@@ -661,6 +661,11 @@ footer {
     border-radius: 15px;
   }
 
+  .topnav.responsive .header-logo {
+    align-self: start;
+    margin-top: 15px;
+  }
+
   .topnav a:hover {
     background-color: #fff;
   }
